Revert "Revert "feat(data-1513): add useOriginalId feature in LAMASSU and use MDM to generate super ids (disabled by default)""
This reverts commit 69c01e0a1d69a0758ff543ac7dc3f57f7a8465f8.